--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta property="og:image" content="https://j2team.github.io/demo/wedding-001/images/slider-1400x933.jpg">
     <meta property="og:site_name" content="J2TEAM Community">
 
-    <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"/>
+    <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"></link>
     <link media="only screen and (max-width: 768px)" href="css/autoptimize_57afcea827824d1db313888418fe13fa.css"
-          rel="stylesheet"/>
-    <link media="screen" href="css/autoptimize_abea50eb5cad43656f88878872d6f753.css" rel="stylesheet"/>
+          rel="stylesheet"></link>
+    <link media="screen" href="css/autoptimize_abea50eb5cad43656f88878872d6f753.css" rel="stylesheet"></link>
     <title>Cường & Hà Wedding</title>
-    <link rel='dns-prefetch' href='//ajax.aspnetcdn.com'/>
-    <link rel='dns-prefetch' href='//ajax.googleapis.com'/>
-    <link rel='dns-prefetch' href='//fonts.googleapis.com'/>
+    <link rel='dns-prefetch' href='//ajax.aspnetcdn.com'></link>
+    <link rel='dns-prefetch' href='//ajax.googleapis.com'></link>
+    <link rel='dns-prefetch' href='//fonts.googleapis.com'></link>
     <link rel='stylesheet' id='jquery-ui-css-css'
-          href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/base/jquery-ui.css?ver=4.6.9' media='all'/>
+          href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/base/jquery-ui.css?ver=4.6.9' media='all'></link>
     <link rel='stylesheet' id='wedding-fonts-css'
-          href='https://fonts.googleapis.com/css?family=Bree+Serif%7CLato&#038;ver=1.0.0' media='all'/>
+          href='https://fonts.googleapis.com/css?family=Bree+Serif%7CLato&#038;ver=1.0.0' media='all'></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
     <script>
