--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
                                 <li id="menu-item-1616"
                                     class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1616"><a
                                         target="_blank"
-                                        href="https://www.facebook.com/groups/j2team.community/">Bản
-                                    đồ</a></li>
+                                        href="">Bản đồ</a></li>
                             </ul>
                         </div>
                     </div>
@@ -136,8 +135,6 @@
                             <div class="wed_simple_block">
                                 <div class="text_block">
                                     <a style="text-decoration: none;"
-                                       onMouseOver="this.style.color='hotpink'"
-                                       onMouseOut="this.style.color='#FFF'"
                                        title="Facebook"
                                        href="#">
                                         <h2>Ngoc Ha</h2>
@@ -150,8 +147,6 @@
                             <div class="wed_simple_block  ">
                                 <div class="text_block">
                                     <a style="text-decoration: none;"
-                                       onMouseOver="this.style.color='#3b5998'"
-                                       onMouseOut="this.style.color='#FFF'"
                                        title="Facebook"
                                        href="#">
                                         <h2>Nguyen Cuong</h2>
@@ -210,15 +205,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 ">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">23 Nov 2011</div>
+                                                    <div class="wed_month_year">08 May 2018</div>
                                                     <h3></h3>
                                                     <h5>That day changed everything</h5>
-                                                    <p>Lần đầu cảm nhận động đất khi chịu ảnh hưởng của <a
-                                                            href="https://www.onthisday.com/date/2011/august/23">trận
-                                                        động đất 5.8 độ Richter của Mineral, Virginia</a> cũng là ngày
-                                                        đầu nói chuyện với em sau bao năm không liên lạc hoặc chỉ
-                                                        dừng ở mức giao tiếp đơn thuần... Ngờ đâu, ngày định mệnh đó
-                                                        chính là khởi đầu của chúng tôi. </p>
+                                                    <p></p>
                                                 </div>
                                             </div>
                                             <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -262,7 +252,7 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 col-md-pull-7">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">23 Nov 2011</div>
+                                                    <div class="wed_month_year">17 June 2018</div>
                                                     <h3>The ZERO point</h3>
                                                     <h5>Let's start the journey</h5>
                                                     <p>Sau những đắn đo, thậm chí là tranh luận về việc yêu
@@ -312,10 +302,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 ">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">18 Jun 2012</div>
+                                                    <div class="wed_month_year">26 June 2018</div>
                                                     <h3>First met</h3>
                                                     <h5>Distance 0</h5>
-                                                    <p>Sau gần 8 tháng yêu nhau, chúng tôi đã được gặp nhau, tại Hà Nội.
+                                                    <p>Chúng tôi đã được gặp nhau.
                                                         Khoảng cách thật gần, lần đầu tiên, nó đã là con số 0 - điều
                                                         tưởng như hiển nhiên đối với những cặp đôi yêu nhau</p>
                                                 </div>
@@ -361,14 +351,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 col-md-pull-7">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">Oct 2012</div>
-                                                    <h3>New chapter</h3>
-                                                    <h5>Havana challenge</h5>
-                                                    <p>Thử thách lần này là 6 năm em học ở Cuba. Dự tính ban đầu: ít
-                                                        sms, ít hơn nữa số email, không điện thoại và lại càng không
-                                                        internet. Nhưng kết quả là chúng tôi đã có hơn 1.000 bức thư, hơn
-                                                        100.000 emais, hơn 80.000 tin nhắn facebook, hàng ngàn
-                                                        sms,...</p>
+                                                    <div class="wed_month_year">September 2018 - January 2019</div>
+                                                    <h3>Long flights</h3>
+                                                    <h5>Follow me</h5>
+                                                    <p>Những chuyến bay đặc biệt...</p>
                                                 </div>
                                             </div>
                                             <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -412,13 +398,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 ">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">2012-2018</div>
-                                                    <h3>Long flights</h3>
-                                                    <h5>Follow me</h5>
-                                                    <p>Những chuyến bay luôn là điều thật đặc biệt với các cặp đôi, nhất
-                                                        là những cặp đôi yêu xa. Hơn 50 chuyến bay, hàng chục hành trình
-                                                        giữ gìn ngọn lửa chung. Rumani, Nga, Cuba, Panama, Việt Nam,...
-                                                        ở đâu có thể, chúng tôi tới đó để được bên nhau.</p>
+                                                    <div class="wed_month_year">10 February 2019</div>
+                                                    <h3>Quarter-final round</h3>
+                                                    <h5>Family Meetings</h5>
+                                                    <p>Tất bật chuẩn bị để gia đình hai bên gặp mặt nhau lần đầu</p>
                                                 </div>
                                             </div>
                                             <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -462,10 +445,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 col-md-pull-7">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">2 Jul 2017</div>
+                                                    <div class="wed_month_year">30 April 2019</div>
                                                     <h3>Semi-final round</h3>
                                                     <h5>The engagement and the deal</h5>
-                                                    <p>Sau 2048 ngày, thỏa thuận chính thức được ký kết. Chúng ta là của nhau!</p>
+                                                    <p>Thỏa thuận chính thức được ký kết. Chúng ta là của nhau!</p>
                                                 </div>
                                             </div>
                                             <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -486,7 +469,7 @@
                                                                                     src="images/wedding.jpg"
                                                                                     alt=""> <span
                                                             class="wed_port_titles"> <span class="wed_port_title">Wedding</span> <span
-                                                            class="wed_port_subtitle">Vietnam 2018</span> <span
+                                                            class="wed_port_subtitle">Vietnam 2019</span> <span
                                                             class="wed_port_icons"> <a href="images/wedding.jpg"
                                                                                        class="lightbox"><i
                                                             class="ti ti-search"></i></a> </span> </span>
@@ -509,11 +492,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 ">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">14 Jan 2018</div>
+                                                    <div class="wed_month_year">10 September 2019</div>
                                                     <h3>Final round</h3>
                                                     <h5>Big stone on our road</h5>
-                                                    <p>Cưới chạy? Không, nó đã được tính toán ngay từ ngày đầu tiên của
-                                                        2244 ngày về trước dẫu sóng gió, khó khăn trên con đường đã đi,
+                                                    <p>Dẫu sóng gió, khó khăn trên con đường đã đi,
                                                         đang đi và sẽ đi là không tránh khỏi, nhưng đó là một phần của
                                                         cuộc sống, 1 phần của tình yêu. Chúng tôi đã hoàn toàn nghiêm
                                                         túc về tình cảm của mình. WE BELIEVE!</p>
@@ -560,12 +542,10 @@
                                             </div>
                                             <div class="col-sm-12 col-md-5 col-md-pull-7">
                                                 <div class="wed_story_txt">
-                                                    <div class="wed_month_year">2018+</div>
+                                                    <div class="wed_month_year">2020+</div>
                                                     <h3>To be continued...</h3>
                                                     <h5>Wedding is not an end, it's a remarkable point on our road</h5>
-                                                    <p>Let's move on! We're waiting for little Anas (Anacita) and little
-                                                        Lys (Linuta) and many other great things of being together cuz
-                                                        we do love each other.</p>
+                                                    <p>Let's move on!</p>
                                                 </div>
                                             </div>
                                             <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -638,9 +618,9 @@
                                         </div>
                                         <div class="col-sm-12 col-md-5 ">
                                             <div class="wed_story_txt">
-                                                <div class="wed_month_year">Sunday 07.30</div>
+                                                <div class="wed_month_year">Tuesday 07.00</div>
                                                 <h4>Xin dâu</h4>
-                                                <p>Tổ chức tại nhà gái tại địa chỉ: Phạm Hùng, Keangnam, Nam Từ Liêm, Nam Từ Liêm Hà Nội</p>
+                                                <p>Tổ chức tại nhà gái tại địa chỉ: XXX</p>
                                             </div>
                                         </div>
                                         <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -680,9 +660,9 @@
                                         </div>
                                         <div class="col-sm-12 col-md-5 col-md-pull-7">
                                             <div class="wed_story_txt">
-                                                <div class="wed_month_year">Sunday 08.00</div>
+                                                <div class="wed_month_year">Tuesday 07.30</div>
                                                 <h4>Rước dâu</h4>
-                                                <p>Tổ chức tại nhà trai, địa chỉ: Phạm Hùng, Keangnam, Nam Từ Liêm, Nam Từ Liêm Hà Nội</p>
+                                                <p>Tổ chức tại nhà trai, địa chỉ: XXX</p>
                                             </div>
                                         </div>
                                         <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -722,9 +702,9 @@
                                         </div>
                                         <div class="col-sm-12 col-md-5 ">
                                             <div class="wed_story_txt">
-                                                <div class="wed_month_year">Sunday 08.30</div>
+                                                <div class="wed_month_year">Tuesday 10.00</div>
                                                 <h4>Lễ cưới</h4>
-                                                <p>Địa điểm: Phạm Hùng, Keangnam, Nam Từ Liêm, Nam Từ Liêm Hà Nội</p>
+                                                <p>Địa điểm: XXX</p>
                                             </div>
                                         </div>
                                         <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
@@ -764,9 +744,9 @@
                                         </div>
                                         <div class="col-sm-12 col-md-5 col-md-pull-7">
                                             <div class="wed_story_txt">
-                                                <div class="wed_month_year">Sunday 10.30</div>
+                                                <div class="wed_month_year">Tuesday 11.30</div>
                                                 <h4>Tiệc cưới</h4>
-                                                <p>Địa điểm: Phạm Hùng, Keangnam, Nam Từ Liêm, Nam Từ Liêm Hà Nội</p>
+                                                <p>Địa điểm: XXX</p>
                                             </div>
                                         </div>
                                         <div class="wed_vertical_line wed_line_top hidden-sm hidden-xs wed_image_bck"
