--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta property="og:title" content="Demo Wedding 001 – J2TEAM Community">
-    <meta property="og:description" content="Download here: https://www.facebook.com/groups/j2team.community/">
+    <meta property="og:title" content="Cường & Hà Wedding">
+    <meta property="og:description" content="Cường & Hà Wedding">
     <meta property="og:image" content="https://j2team.github.io/demo/wedding-001/images/slider-1400x933.jpg">
-    <meta property="og:site_name" content="J2TEAM Community">
+    <meta property="og:site_name" content="Cường & Hà Wedding">
 
     <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"></link>
     <link media="only screen and (max-width: 768px)" href="css/autoptimize_57afcea827824d1db313888418fe13fa.css"
