--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
                             <div class="wed_simple_block">
                                 <div class="text_block">
                                     <a style="text-decoration: none;"
+                                       onMouseOver="this.style.color='hotpink'"	
+                                       onMouseOut="this.style.color='#FFF'"
                                        title="Facebook"
                                        href="#">
                                         <h2>Ngoc Ha</h2>
@@ -147,6 +149,8 @@
                             <div class="wed_simple_block  ">
                                 <div class="text_block">
                                     <a style="text-decoration: none;"
+                                       onMouseOver="this.style.color='#3b5998'"	
+                                       onMouseOut="this.style.color='#FFF'"
                                        title="Facebook"
                                        href="#">
                                         <h2>Nguyen Cuong</h2>
