--- a/index.html
+++ b/index.html
@@ -936,9 +936,9 @@
         </footer>
     </section>
 </div>
-<audio controls autoplay loop hidden>
+<!-- <audio controls autoplay loop hidden>
     <source src="sounds/sugar.mp3" type="audio/mpeg">
-</audio>
+</audio> -->
 <script>
     /*  */
     var _wpcf7 = {
