--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <div class="wed_slider wed_image_bck wed_wht_txt" data-color="" data-image="images/gallery/01.jpg">
                 <div class="wed_over" data-color="#1e1e1e" data-opacity="0.6"></div>
                 <div class="container">
-                    <div class="wed_slide_txt wed_slide_right_middle text-center" data-0="opacity:1;"
-                         data--400-bottom="opacity:0;"><img src="images/save_the_date_names-800x800.png" alt=""></div>
+                    <!--<div class="wed_slide_txt wed_slide_right_middle text-center" data-0="opacity:1;"
+                         data--400-bottom="opacity:0;"><img src="images/save_the_date_names-800x800.png" alt=""></div>-->
                 </div>
                 <a class="wed_scroll_down wed_go skrollable skrollable-between" href="#wed_content"
                    data-0="opacity:1; bottom:40px;" data--400-bottom="opacity:0; bottom:80px;"
@@ -307,7 +307,7 @@
                                             <div class="col-sm-12 col-md-5 ">
                                                 <div class="wed_story_txt">
                                                     <div class="wed_month_year">26 June 2018</div>
-                                                    <h3>First met</h3>
+                                                    <h3>First date</h3>
                                                     <h5>Distance 0</h5>
                                                     <p>Chúng tôi đã được gặp nhau.
                                                         Khoảng cách thật gần, lần đầu tiên, nó đã là con số 0 - điều
@@ -854,8 +854,6 @@
                                                 class="wed_port_titles"> <span class="wed_port_title"></span> <span
                                                 class="wed_port_icons"> <i class="ti ti-search"></i> </span> </span></a>
                                         </div>
--->
-
                                         <div class="col-sm-4 wed_portfolio_item grid-item"><a href="images/co3-1.jpg"
                                                                                               class="lightbox wed_portfolio_item_cont">
                                             <img alt="" src="images/co3-1.jpg"/> <span
@@ -910,6 +908,8 @@
                                                 class="wed_port_titles"> <span class="wed_port_title"></span> <span
                                                 class="wed_port_icons"> <i class="ti ti-search"></i> </span> </span></a>
                                         </div>
+-->
+
                                     </div>
                                 </div>
                             </div>
