--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                                                  src="images/black_white_couple_invert-50x45.png" alt=""/> <img
                         class="wed_couple_header wed_white_couple animated extra"
                         src="images/black_white_couple-50x45.png" alt=""/>
-                    <div class="wed_text_container"><a href="https://www.facebook.com/groups/j2team.community/" class="wed_logo wed_logo_animation">Cuong & Ha</a>
-                        <div class="wed_logo_und">10.09.2019</div>
+                    <div class="wed_text_container"><a href="" class="wed_logo wed_logo_animation">Cuong & Ha</a>
+                        <!-- <div class="wed_logo_und">10.09.2019</div> -->
                     </div>
                 </div>
                 <div class="wed_top_menu_mobile_link"><i class="ti ti-menu"></i></div>
@@ -109,8 +109,18 @@
             <div class="wed_slider wed_image_bck wed_wht_txt" data-color="" data-image="images/gallery/01.jpg">
                 <div class="wed_over" data-color="#1e1e1e" data-opacity="0.6"></div>
                 <div class="container">
-                    <!--<div class="wed_slide_txt wed_slide_right_middle text-center" data-0="opacity:1;"
-                         data--400-bottom="opacity:0;"><img src="images/save_the_date_names-800x800.png" alt=""></div>-->
+                    <div class="wed_slide_txt wed_slide_right_middle text-center" data-0="opacity:1;"
+                         data--400-bottom="opacity:0;">
+                         <div class="output">
+                            <div class="effect" style="width: 300px; margin: auto;"><img src="images/e7b73-top-line.png" alt=""></div>
+                            <div class="content">
+                                <h3>We’re Getting Married!</h3>
+                                <h2>Cuong &amp; Ha</h2>
+                                <h3>10.09.2019</h3>
+                            </div>
+                            <div class="effect" style="width: 300px; margin: auto;"><img src="images/c1170-bottom-line.png" alt=""></div>
+                        </div>
+                    </div>
                 </div>
                 <a class="wed_scroll_down wed_go skrollable skrollable-between" href="#wed_content"
                    data-0="opacity:1; bottom:40px;" data--400-bottom="opacity:0; bottom:80px;"
@@ -134,9 +144,7 @@
                         <div class="fw-col-xs-12 fw-col-sm-6 wed_push_none  wed_image_bck text-center  wed_col">
                             <div class="wed_simple_block">
                                 <div class="text_block">
-                                    <a style="text-decoration: none;"
-                                       onMouseOver="this.style.color='hotpink'"	
-                                       onMouseOut="this.style.color='#FFF'"
+                                    <a style="text-decoration: none; color: #FFF"
                                        title="Facebook"
                                        href="#">
                                         <h2>Ha</h2>
@@ -148,9 +156,7 @@
                         <div class="fw-col-xs-12 fw-col-sm-6 wed_push_none  wed_image_bck text-center  wed_col">
                             <div class="wed_simple_block  ">
                                 <div class="text_block">
-                                    <a style="text-decoration: none;"
-                                       onMouseOver="this.style.color='#3b5998'"	
-                                       onMouseOut="this.style.color='#FFF'"
+                                    <a style="text-decoration: none; color: #FFF"
                                        title="Facebook"
                                        href="#">
                                         <h2>Cuong</h2>
