--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta property="og:title" content="Cường & Hà Wedding">
     <meta property="og:description" content="Cường & Hà Wedding">
-    <meta property="og:image" content="https://j2team.github.io/demo/wedding-001/images/slider-1400x933.jpg">
+    <meta property="og:image" content="http://wedding.cuongn.com/images/slider-1400x933.png">
     <meta property="og:site_name" content="Cường & Hà Wedding">
 
     <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"></link>
@@ -85,7 +85,7 @@
                         class="wed_couple_header wed_white_couple animated extra"
                         src="images/black_white_couple-50x45.png" alt=""/>
                     <div class="wed_text_container"><a href="" class="wed_logo wed_logo_animation">Cuong & Ha</a>
-                        <!-- <div class="wed_logo_und">10.09.2019</div> -->
+                        <div class="wed_logo_und">10.09.2019</div>
                     </div>
                 </div>
                 <div class="wed_top_menu_mobile_link"><i class="ti ti-menu"></i></div>
@@ -113,9 +113,10 @@
                          data--400-bottom="opacity:0;">
                          <div class="output">
                             <div class="content">
-                                <h3>We’re Getting Married!</h3>
-                                <h2>Cuong &amp; Ha</h2>
+                                <h4>We’re Getting Married!</h4>
+                                <h2>Save  The  Date</h2>
                                 <h3>10.09.2019</h3>
+                                <h4>Location</h4>
                             </div>
                         </div>
                     </div>
@@ -312,7 +313,7 @@
                                                 <div class="wed_story_txt">
                                                     <div class="wed_month_year">26 June 2018</div>
                                                     <h3>First date</h3>
-                                                    <h5>Distance 0</h5>
+                                                    <h5>Distance 0km</h5>
                                                     <!-- <p>Chúng tôi đã được gặp nhau.
                                                         Khoảng cách thật gần, lần đầu tiên, nó đã là con số 0 - điều
                                                         tưởng như hiển nhiên đối với những cặp đôi yêu nhau</p> -->
@@ -502,7 +503,7 @@
                                                 <div class="wed_story_txt">
                                                     <div class="wed_month_year">10 September 2019</div>
                                                     <h3>Final round</h3>
-                                                    <h5>Big stone on our road</h5>
+                                                    <h5>Now We Togethe</h5>
                                                     <!-- <p>Dẫu sóng gió, khó khăn trên con đường đã đi,
                                                         đang đi và sẽ đi là không tránh khỏi, nhưng đó là một phần của
                                                         cuộc sống, 1 phần của tình yêu. Chúng tôi đã hoàn toàn nghiêm
