--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <h4>We’re Getting Married!</h4>
                                 <h2>Save  The  Date</h2>
                                 <h3>10.09.2019</h3>
-                                <h4>Location</h4>
+                                <h4><a target="_blank" href="https://goo.gl/maps/qjoeva3adMinpLr7A">&#xf041; Cam Ha, Hoi An</a></h4>
                             </div>
                         </div>
                     </div>
@@ -1170,6 +1170,27 @@
                 <div class="container text-center">
                     <div class="wed_thin_titles">
                         <h2>“ The best gift is your patecipation, thanks to all ”</h2>
+                    </div>
+                    <div class="fw-row">
+                        <div class="fw-col-xs-12 enh_push_none  wed_image_bck   wed_col">
+                            <div class="  "></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="wed_section_inner wed_image_bck wed_wht_txt wed_fixed  "
+                     style=background-image:url(images/bg.jpg); data-stellar-background-ratio="0.2">
+                <div class="wed_over" data-color="#edc082" data-opacity="0.9"></div>
+                <div class="container text-center">
+                    <div class="wed_thin_titles">
+                        <div class="output">
+                            <div class="content">
+                                <h2>Banking Information</h2>
+                                <!-- <h4>TPB: 00036298001</h4>
+                                <h4>MUFG: 放出支店（073）-0200413</h4>
+                                <h4>Mizuho: 梅田支店（）-3018066</h4> -->
+                            </div>
+                        </div>
                     </div>
                     <div class="fw-row">
                         <div class="fw-col-xs-12 enh_push_none  wed_image_bck   wed_col">
