--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Cường & Hà Wedding">
-    <meta property="og:description" content="Cường & Hà Wedding">
-    <meta property="og:image" content="http://wedding.cuongn.com/images/slider-1400x933.png">
+    <meta property="og:description" content="Please save the date 
+    for the wedding of 
+    Cuong Nguyen to Ngoc Ha
+    September 10, 2019
+    Cam Ha, Hoi An
+    Formal invitation to follow">
+    <meta property="og:image" content="https://wedding.cuongn.com/images/slider-1400x933.png">
     <meta property="og:site_name" content="Cường & Hà Wedding">
 
     <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"></link>
@@ -116,7 +121,7 @@
                                 <h4>We’re Getting Married!</h4>
                                 <h2>Save  The  Date</h2>
                                 <h3>10.09.2019</h3>
-                                <h4><a target="_blank" href="https://goo.gl/maps/qjoeva3adMinpLr7A">&#xf041; Cam Ha, Hoi An</a></h4>
+                                <h4><a style="text-decoration: none; color: #FFF" target="_blank" href="https://goo.gl/maps/qjoeva3adMinpLr7A">&#xf041; Cam Ha, Hoi An</a></h4>
                             </div>
                         </div>
                     </div>
