--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     September 10, 2019
     Cam Ha, Hoi An
     Formal invitation to follow">
-    <meta property="og:image" content="https://wedding.cuongn.com/images/slider-1400x933.png">
+    <meta property="og:image" content="https://wedding.cuongn.com/images/slider-1400x933.jpg">
     <meta property="og:site_name" content="Cường & Hà Wedding">
 
     <link media="all" href="css/autoptimize_5eaa825ed5418fe7c35cba15f004d85e.css" rel="stylesheet"></link>
