--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <h4>We’re Getting Married!</h4>
                                 <h2>Save  The  Date</h2>
                                 <h3>10.09.2019</h3>
-                                <h4><a style="text-decoration: none; color: #FFF" target="_blank" href="https://goo.gl/maps/qjoeva3adMinpLr7A">&#xf041; Cam Ha, Hoi An</a></h4>
+                                <h4>Cam Ha, Hoi An</h4>
                             </div>
                         </div>
                     </div>
