--- a/index.html
+++ b/index.html
@@ -1190,10 +1190,10 @@
                     <div class="wed_thin_titles">
                         <div class="output">
                             <div class="content">
-                                <h2>Banking Information</h2>
-                                <!-- <h4>TPB: 00036298001</h4>
+                                <!-- <h2>Banking Information</h2> -->
+                                <h4>TPB: 00036298001</h4>
                                 <h4>MUFG: 放出支店（073）-0200413</h4>
-                                <h4>Mizuho: 梅田支店（）-3018066</h4> -->
+                                <h4>Mizuho: 梅田支店（460）-3018066</h4>
                             </div>
                         </div>
                     </div>
