--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 title: Cuong Nguyen
-subtitle: This is where I will tell my friends way too much about me
+subtitle: This is where I will tell you way too much about me
 ---
 
