--- a/cv/index.html
+++ b/cv/index.html
@@ -124,7 +124,7 @@
 									</div>
 									<div class="item-content">
 										<p>Feb 2020 - No Expiration Date 
-										<br><a href="https://www.scrum.org/certificates/504423" class="theme-link">Credential ID: 504423</a></p>
+										<br>Credential ID: <a href="https://www.scrum.org/certificates/504423" class="theme-link">504423</a></p>
 									</div>
 								</div>
 								<div class="item mb-3">
@@ -135,7 +135,7 @@
 									</div>
 									<div class="item-content">
 										<p>Feb 2020 - No Expiration Date 
-										<br><a href="https://www.scrum.org/certificates/506107" class="theme-link">Credential ID: 506107</a></p>
+										<br>Credential ID: <a href="https://www.scrum.org/certificates/506107" class="theme-link">506107</a></p>
 									</div>
 								</div>
 								<div class="item mb-3">
@@ -146,7 +146,7 @@
 									</div>
 									<div class="item-content">
 										<p>January 2020 - No Expiration Date 
-										<br><a href="#" class="theme-link">Credential ID: N1A207335J</a></p>
+										<br>Credential ID: <a href="#" class="theme-link">N1A207335J</a></p>
 									</div>
 								</div>
 								<div class="item mb-3">
@@ -157,7 +157,7 @@
 									</div>
 									<div class="item-content">
 										<p>March 2019 - No Expiration Date 
-										<br><a href="https://www.coursera.org/account/accomplishments/specialization/SN8BSBM3DUBN" class="theme-link">Credential ID: SN8BSBM3DUBN</a></p>
+										<br>Credential ID: <a href="https://www.coursera.org/account/accomplishments/specialization/SN8BSBM3DUBN" class="theme-link">SN8BSBM3DUBN</a></p>
 									</div>
 								</div>
 							</section>
