--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Cuong Nguyen</h2>
 							<div class="resume-tagline mb-3 mb-md-0">Senior Software Engineer | Project Manager</div>
-							<div class="resume-tagline mb-3 mb-md-0 font-weight-bold">PSM | PSPO</div>
+							<div class="resume-tagline mb-3 mb-md-0 font-weight-bold">PMP® | PSM | PSPO</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -116,6 +116,17 @@
 							
                             <section class="project-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Certificates</h3>
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Management Professional(PMP®)</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Project Management Institute, Inc.</div>
+										
+									</div>
+									<div class="item-content">
+										<p>Jun 2020 - Jun 2023
+										<br>Credential ID: <a href="" class="theme-link">#2769211</a></p>
+									</div>
+								</div>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Professional Scrum Master I</h4>
